--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.546.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
